clean_test_result.txt
   Compiling pasta v0.1.0 (C:\home\maz\git\dcomp_sample-rs-2\crates\pasta)
error[E0596]: cannot borrow `output` as mutable, as it is not declared as mutable
  --> crates\pasta\tests\two_pass_transpiler_test.rs:87:5
   |
87 |     output.push_str(&pass2_output);
   |     ^^^^^^ cannot borrow as mutable
   |
help: consider changing this to be mutable
   |
74 |     let mut output = String::from_utf8(buffer).unwrap();
   |         +++

For more information about this error, try `rustc --explain E0596`.
error: could not compile `pasta` (test "two_pass_transpiler_test") due to 1 previous error
